--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,4 @@
 .terraform
 .terraform.lock.hcl
 terraform.tfstate
-terraform.tfstate.backup
-terraform.tfvars
-terraform.tfvars.backup
-terraform.tfvars.backup.backup
-terraform.tfvars.backup.backup.backup
-terraform.tfvars.backup.backup.backup.backup
+terraform.tfstate.*
